#summary Changelog for all changes since the fork

= Changes =

== Version 0.7.6 ==
  * New Application-Icon and Overlay-icons for star/publish 
  * Added support for the star/unstar feature
  * Added support for the published-feature
  * Fixed display of fresh/starred/published articles in the virtual feeds
  * Fixed handling of URLs in Article-View
  * Fixed problems with marking articles as read/unread

== Version 0.7.5 ==
  * Fixed sorting of categories
  * Enhanced mediafile-download and notification

== Version 0.7.4 ==
  * Minor bugs fixed
  * Better fling-support for headline-list and articles
  * No recommendation when typing URL
  * Fixed Bug with unread-counts
  * Implemented new API-methods from tt-rss.org to avoid the manual hacking
  * Added german localisation
  
== Version 0.7.3 ==
  * Problems with API from 1.4.3.1 are (hopefully) resolved. Please mail me if i am wrong :)

== Version 0.7.2 ==
  * Fixed wrong calculation of unread-counts
  * Added welcome-dialog for the first-run

== Version 0.7.1 ==
  * Added donate-button to about-dialog
  * Fixed two unhandled Exceptions
  * Fixed no virtual Categories beeing displayed on first start

== Version 0.7 ==
  * Improved updating of locally stored information
  * Faster startup
  * Better restarting of activities
  * Fixed sorting-issues of feeds
  * Fixed double-login
  * Fixed progress-indicator

== Version 0.6.8 ==
  * Fixed: https://code.google.com/p/ttrss-reader-fork/issues/detail?id=30 (Only one article shown when using old API)
  * Added notification for finished attachment-downloads.

== Version 0.6.6 ==
  * Fixed no articles beeing fetched if API doesn't support getArticles
  * Fixed problem with VirtualCategories not beeing displayed

== Version 0.6.5 ==
  * Fixed problem with attached images
  * Changed update-behaviour

== Version 0.6.4 ==
  * Added Changelog with button for the Donations-wikipage
  * Fixed some concurrent-access-issues with database
  * No more data on sdcard